--- a/noteService/package.json
+++ b/noteService/package.json
@@ -16,6 +16,7 @@
     "log4js": "^4.0.2",
     "mongoose": "^5.4.18",
     "morgan": "^1.9.1",
+    "request": "^2.88.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
