--- a/notificationService/package.json
+++ b/notificationService/package.json
@@ -20,7 +20,9 @@
     "log4js": "^3.0.3",
     "mongoose": "^5.2.3",
     "morgan": "^1.9.0",
-    "socket.io": "^2.1.1"
+    "request": "^2.88.0",
+    "socket.io": "^2.1.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "chai": "^4.0.2",
