--- a/userService/Dockerfile
+++ b/userService/Dockerfile
@@ -6,7 +6,7 @@ LABEL Maintainer="Priyanka.Saha2"
 
 # Set environment variables - like API urls/Port etc.
 ENV PORT 3001
-ENV MONGO_URL mongodb://localhost:27017/notes-app
+ENV MONGO_URL mongodb://localhost:27017/keep
 
 # Create app directory to hold the application code inside the image
 # this will be the working directory for your application
@@ -24,7 +24,7 @@ RUN npm install
 COPY . .
 
 # Map docker deamon to specific
-EXPOSE {PORT}
+EXPOSE ${PORT}
 
 # Define the command to run your app which defines your runtime, like 'npm start'
 CMD [ "npm", "start" ]
