--- a/userService/Dockerfile
+++ b/userService/Dockerfile
@@ -5,8 +5,8 @@ FROM node:10.15.3-alpine
 LABEL Maintainer="Priyanka.Saha2"
 
 # Set environment variables - like API urls/Port etc.
-ENV PORT 3001
-ENV MONGO_URL mongodb://localhost:27017/keep
+ENV PORT 3000
+ENV MONGO_URL mongodb://192.168.31.106:27017/keep
 
 # Create app directory to hold the application code inside the image
 # this will be the working directory for your application
@@ -23,7 +23,7 @@ RUN npm install
 # Bundle your app's source code inside the Docker image
 COPY . .
 
-# Map docker deamon to specific
+# Port to connect to application - used in appConfig.js
 EXPOSE ${PORT}
 
 # Define the command to run your app which defines your runtime, like 'npm start'
