Adding docker changes for each service

--- a/apigateway/docker-compose.yml
+++ b/apigateway/docker-compose.yml
@@ -1,17 +1,19 @@
 version: '3'
 
 services:
-  na_notes:
-    image: 'priyankasaha2/keep-note-final-noteservice:latest'
+  na_apigateway:
+    image: 'priyankasaha2/keep-note-final-apigateway:latest'
     build: .
-    container_name: na_notes
+    container_name: na_apigateway
     ports:
-      - '3001:3001'
+      - '8000:8000'
     networks:
-      - na_networks_notes
+      - na_networks_apigateway
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
-      - USER_URL=http://localhost:3000/api/v1/auth
+      - USER_URL=http://localhost:3000
+      - NOTES_URL=http://localhost:3001
+      - NOTIFICATIONS_URL=http://localhost:3003
     restart: 
       condition: on-failure
     depends_on:
@@ -24,9 +26,9 @@ services:
     ports:
       - '27017:27017'
     networks:
-      - na_networks_notes
+      - na_networks_apigateway
 
 networks:
-  na_networks_notes:
+  na_networks_apigateway:
     driver: bridge
     #driver: host
