--- a/notificationService/docker-compose.yml
+++ b/notificationService/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3'
 
 services:
-  na_notes:
-    image: 'priyankasaha2/keep-note-final-noteservice:latest'
+  na_notification:
+    image: 'priyankasaha2/keep-note-final-notificationservice:latest'
     build: .
-    container_name: na_notes
+    container_name: na_notification
     ports:
-      - '3001:3001'
+      - '3003:3003'
     networks:
-      - na_networks_notes
+      - na_networks_notification
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
-      - USER_URL=http://localhost:3000/api/v1/auth
+      - USER_URL=http://localhost:3000
     restart: 
       condition: on-failure
     depends_on:
@@ -24,9 +24,9 @@ services:
     ports:
       - '27017:27017'
     networks:
-      - na_networks_notes
+      - na_networks_notification
 
 networks:
-  na_networks_notes:
+  na_networks_notification:
     driver: bridge
     #driver: host
