fixes after testing docker for individual services

--- a/noteService/Dockerfile
+++ b/noteService/Dockerfile
@@ -6,7 +6,7 @@ LABEL Maintainer="Priyanka.Saha2"
 
 # Set environment variables - like API urls/Port etc.
 ENV PORT 3001
-ENV MONGO_URL mongodb://192.168.31.106:27017/keep
+ENV MONGO_URL mongodb://localhost:27017/keep
 
 # Create app directory to hold the application code inside the image
 # this will be the working directory for your application
