modifying docker-compose service configs

--- a/apigateway/docker-compose.yml
+++ b/apigateway/docker-compose.yml
@@ -8,14 +8,62 @@ services:
     ports:
       - '8000:8000'
     networks:
-      - na_networks_apigateway
+      - na_network
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
       - USER_URL=http://localhost:3000
       - NOTES_URL=http://localhost:3001
       - NOTIFICATIONS_URL=http://localhost:3003
-    restart: 
-      condition: on-failure
+    restart: on-failure
+    depends_on:
+      - na_users
+      - na_notes
+      - na_notification
+  na_notes:
+    image: 'priyankasaha2/keep-note-final-noteservice:latest'
+    build: ../noteService
+    container_name: na_notes
+    ports:
+      - '3001:3001'
+    networks:
+      - na_network
+    environment:
+      - MONGO_URL=mongodb://na_mongodb:27017/keep
+      - USER_URL=http://localhost:3000/api/v1/auth
+      - LOG_LEVEL=debug
+    restart: on-failure
+    depends_on:
+      - na_mongodb
+      - na_users
+  na_notification:
+    image: 'priyankasaha2/keep-note-final-notificationservice:latest'
+    build: ../notificationService
+    container_name: na_notification
+    ports:
+      - '3003:3003'
+    networks:
+      - na_network
+    environment:
+      - MONGO_URL=mongodb://na_mongodb:27017/keep
+      - USER_URL=http://localhost:3000
+      - LOG_LEVEL=debug
+      - SLEEPDURATION=10000
+    restart: on-failure
+    depends_on:
+      - na_mongodb
+  na_users:
+    image: 'priyankasaha2/keep-note-final-userservice:latest'
+    build: ../userService
+    container_name: na_users
+    ports:
+      - '3000:3000'
+    networks:
+      - na_network
+    environment:
+      - MONGO_URL=mongodb://na_mongodb:27017/keep
+      #- MONGO_URL=mongodb://localhost:27017/keep
+      - LOG_LEVEL=debug
+    restart: on-failure
     depends_on:
       - na_mongodb
   na_mongodb:
@@ -26,9 +74,9 @@ services:
     ports:
       - '27017:27017'
     networks:
-      - na_networks_apigateway
+      - na_network
 
 networks:
-  na_networks_apigateway:
+  na_network:
     driver: bridge
     #driver: host
