remove localhost in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       - na_network
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
-      - USER_URL=http://localhost:3000/api/v1/auth
+      - USER_URL=http://na_users:3000/api/v1/auth
       - LOG_LEVEL=debug
     restart: on-failure
     depends_on:
@@ -56,11 +56,12 @@ services:
       - na_network
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
-      - USER_URL=http://localhost:3000
+      - USER_URL=http://na_users:3000
       - LOG_LEVEL=debug
       - SLEEPDURATION=10000
     restart: on-failure
     depends_on:
+      - na_users
       - na_mongodb
   na_users:
     image: 'priyankasaha2/keep-note-final-userservice:latest'
@@ -72,7 +73,6 @@ services:
       - na_network
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
-      #- MONGO_URL=mongodb://localhost:27017/keep
       - LOG_LEVEL=debug
     restart: on-failure
     depends_on:
