--- a/noteService/docker-compose.yml
+++ b/noteService/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - na_network
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
-      - USER_URL=http://localhost:3000/api/v1/auth
+      - USER_URL=http://na_users:3000/api/v1/auth
       - LOG_LEVEL=debug
     restart: on-failure
     depends_on:
