--- a/notificationService/docker-compose.yml
+++ b/notificationService/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - na_network
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
-      - USER_URL=http://localhost:3000
+      - USER_URL=http://na_users:3000
       - LOG_LEVEL=debug
       - SLEEPDURATION=10000
     restart: on-failure
@@ -25,6 +25,7 @@ services:
     ports:
       - '27017:27017'
     networks:
+      - na_users
       - na_network
 
 networks:
