--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       - na_network
     environment:
       - MONGO_URL=mongodb://na_mongodb:27017/keep
-      - USER_URL=http://na_users:3000
+      - USER_URL=http://na_users:3000/api/v1/auth
       - LOG_LEVEL=debug
       - SLEEPDURATION=10000
     restart: on-failure
