--- a/noteService/package.json
+++ b/noteService/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^4.0.2",
     "mongoose": "^5.4.18",
     "morgan": "^1.9.1",
