--- a/web-app/package.json
+++ b/web-app/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@auth0/angular-jwt": "^3.0.0",
     "font-awesome": "^4.7.0",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.2",
